--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.2.4 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_typeahead: ^5.2.0
   get: ^4.6.6
   google_fonts: 6.1.0
 
@@ -21,3 +23,4 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/
+    - lib/assets/loading.gif
